--- a/client/templates/voucherEdit/voucherEdit.html
+++ b/client/templates/voucherEdit/voucherEdit.html
@@ -1,3 +1,38 @@
 <template name="voucherEdit">
-  OMG THIS IS THE VOUCHER
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+
+      {{# if voucher_is_claimed}}
+      <div class="congratulations">
+        <div class="panel panel-default">
+          <div class="panel-heading">Συγχαρητήρια</div>
+          <div class="panel-body">
+            Συγχαρητήρια, κερδίσατε ένα {{gift.name}}!
+          </div>
+        </div>
+      </div>
+
+      <div class="entry">
+        <div class="panel panel-default">
+          <div class="panel-heading">Γράψτε τα στοιχεία σας</div>
+          <div class="panel-body">
+
+          </div>
+        </div>
+      </div>
+      {{/if}}
+
+      {{# if voucher_is_completed}}
+      <div class="congratulations">
+        <div class="panel panel-default">
+          <div class="panel-heading">Συγχαρητήρια</div>
+          <div class="panel-body">
+            Συγχαρητήρια, έχετε κερδίσει ένα {{gift.name}}!
+          </div>
+        </div>
+      </div>
+      {{/if}}
+
+    </div>
+  </div>
 </template>
